fix/text-align (#13)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -257,11 +257,12 @@ figure {
 }
 
 .slide h1 {
+    text-align: center;
     position: absolute;
     font-size: 3em;
     width: 100%;
     color: #fff;
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
 
 }
 
